--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=easy-task
-DB_USERNAME=indietec
-DB_PASSWORD=indietec
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
