--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0",
+        "barryvdh/laravel-dompdf": "^0.8.1",
         "consoletvs/charts": "5.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
